--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
           <a href="https://vite.dev" target="_blank">
             <img src='/vite.svg' class="logo" alt="Vite logo" />
           </a>
-          <h1>Hello Vite!</h1>
+           <h1 class="text-3xl font-bold underline text-blue-500">
+              Hello world!
+            </h1>
           <div class="card">
             <button id="counter" type="button"></button>
           </div>
