--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <div id="aliceDogTokenBalance">0</div>
               <div>CatToken Balance:</div>
               <div id="aliceCatTokenBalance">0</div>
-              <div>Share of Liquidity Pool:</div> 
+              <div>Share of Liquidity Pool(%):</div> 
               <div id="aliceShareOfLiquidityPool">0</div>
               <div>Portfolio Value in USD:</div>
               <div id="aliceTotalValueInUSD">0</div>
@@ -131,7 +131,7 @@
               <div id="bobDogTokenBalance">0</div>
               <div>CatToken Balance:</div>
               <div id="bobCatTokenBalance">0</div>
-              <div>Share of Liquidity Pool:</div>
+              <div>Share of Liquidity Pool(%):</div>
               <div id="bobShareOfLiquidityPool">0</div>
               <div>Portfolio Value in USD:</div>
               <div id="bobTotalValueInUSD">0</div>
@@ -195,7 +195,7 @@
               <div id="carolDogTokenBalance">0</div>
               <div>CatToken Balance:</div>
               <div id="carolCatTokenBalance">0</div>
-              <div>Share of Liquidity Pool:</div>
+              <div>Share of Liquidity Pool(%):</div>
               <div id="carolShareOfLiquidityPool">0</div>
               <div>Portfolio Value in USD:</div>
               <div id="carolTotalValueInUSD">0</div>
@@ -259,7 +259,7 @@
               <div id="daveDogTokenBalance">0</div>
               <div>CatToken Balance:</div>
               <div id="daveCatTokenBalance">0</div>
-              <div>Share of Liquidity Pool:</div>
+              <div>Share of Liquidity Pool(%):</div>
               <div id="daveShareOfLiquidityPool">0</div>
               <div>Portfolio Value in USD:</div>
               <div id="daveTotalValueInUSD">0</div>
