--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- make a navbar and make it sticky on top -->
     <nav class="bg-pink-200 border-b border-gray-200 fixed top-0 w-full z-10">
       <div class="py-4 container flex flex-wrap justify-between items-center mx-auto">
-
-        <span class="self-center text-3xl font-semibold whitespace-nowrap">Decentralized Exchange Simulator</span>
+        
+        <span class="self-center text-3xl font-bold whitespace-nowrap text-pink-500">Decentralized Exchange Simulator</span>
         <span class="self-center text-xl font-semibold whitespace-nowrap">
           <a href="https://github.com/erinata/impermanent_loss" target="_blank" class="text-gray-800 hover:text-black">
             <svg class="w-8 h-8 text-black fill-current" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
