--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
               
               <!-- <div class="text-xl font-bold mb-2">Coinbase</div> -->
               <div class="grid grid-cols-2 gap-4">
-                <div class="text-xl font-bold mb-2">DogToken Price in USD:</div>
-                <div class="text-xl font-bold mb-2">CatToken Price in USD:</div>
+                <div class="text-xl font-bold mt-2">DogToken Price in USD:</div>
+                <div class="text-xl font-bold mt-2">CatToken Price in USD:</div>
                 <div class="text-3xl">$<input type="number" class="border mx-4" id="coinbaseDogTokenPriceInput" value="1" min="0.01" step="0.01"/></div>
                 <div class="text-3xl">$<input type="number" class="border mx-4" id="coinbaseCatTokenPriceInput" value="1" min="0.01" step="0.01"/></div>
               </div>
